--- a/data.qmd
+++ b/data.qmd
@@ -2,6 +2,7 @@
 ::: callout-note
 ## This page contains Tabs. Please click through tabs to see additional charts/info.
 :::
+## Description
 For this project, we will be using a subset of the **Citywide Payroll Data**.\
 This dataset is available via NYC OpenData and provided by the Office of Payroll Administration (OPA).
 
@@ -32,7 +33,7 @@ payroll_data_format <- tibble(
   filter = c(
     "From 2015 to 2024 (10 years)", 
     "FIRE DEPARTMENT, POLICE DEPARTMENT",
-    "BRONX, BROOKLYN, MANHATTAN, QUEENS, RICHMOND",
+    "BRONX, BROOKLYN, MANHATTAN, QUEENS, STATEN ISLAND",
     "per Annum, per Day, per Hour"
   )
 )
@@ -46,9 +47,9 @@ kable(payroll_data_format,
   column_spec(1, width = "200px")
 ```
 
-\
 
-First, we will examine the metadata of the dataset, how to import the data, followed by the decision-making process for selecting a subset of the data and transforming the original dataset with 6,225,611 rows to our final dataset with 804,630 rows. Finally, an analysis of missing values to identify any potential issues that may impact our analysis.
+<!-- First, we will examine the metadata of the dataset, how to import the data and process the subset data. Finally, an analysis of missing values to identify any potential issues that may impact our analysis. -->
+<!-- , followed by the decision-making process for selecting a subset of the data and transforming the original dataset with 6,225,611 rows to our final dataset with 804,630 rows. -->
 
 ```{r}
 #| echo: false
@@ -76,7 +77,12 @@ library(lubridate)
 \
 \
 
-## Description
+
+
+### Data information
+
+The payroll data is provided annually by [NYC OpenData](https://data.cityofnewyork.us/City-Government/Citywide-Payroll-Data-Fiscal-Year-/k397-673e/about_data) and contains New York City employee salaries by Fiscal Year. We are using the latest snapshot of the data, released on October 30, 2024. Here are some details about the format of the data, the frequency of updates, dimensions about the data, and other relevant metadata:
+
 
 ::: panel-tabset
 ## Data Metadata
@@ -187,10 +193,9 @@ kable(payroll_data_format,
 :::
 
 \
-\
-\
 
-**Data Source**
+
+### Data Source
 
 
 ```{mermaid}
@@ -337,15 +342,15 @@ To analyse missing data, we will classify our data in 4 categories: \
 ### NAs and Blanks
 
 First, let's check the missing values of the original dataset.\
-Using a sample of 1 million records (from 6.22 million rows) we have close to **4.5%** of missing data classified as [■]{style="color:#D7191C;"} NA or [■]{style="color:#FDAE61;"} Blank by the vis_miss() plot. We can also observe missing values in 7 columns**\***: \
-<p style="margin-top: -15px;">
--  3 columns related to a person's name (first_name, mid_init, last_name)
--  payroll_number
--  work_location_borough
--  title_description
--  agency_start_date \
-</p>
-[**(\*based on the black highlights and the percentages listed in the column names)**]{style="font-size:80%;margin-top: -15px;"}
+Using a sample of 1 million records (from 6.22 million rows) we have close to **4.5%** of missing data classified as [■]{style="color:#D7191C;"} NA or [■]{style="color:#FDAE61;"} Blank. We identified missing values in 7 columns*, including three related to a person’s name (`first_name`, `mid_init`, `last_name`), `payroll_number`, `work_location_borough`, `title_description`, and `agency_start_date`. \
+<!-- <p style="margin-top: -15px;"> -->
+<!-- -  3 columns related to a person's name (first_name, mid_init, last_name) -->
+<!-- -  payroll_number -->
+<!-- -  work_location_borough -->
+<!-- -  title_description -->
+<!-- -  agency_start_date \ -->
+<!-- </p> -->
+[**(\*based on the black highlights and the percentages listed in the column names of the vis_miss() plot)**]{style="font-size:80%;margin-top: -15px;"}
 
 
 
@@ -382,6 +387,7 @@ payroll_data_missing |>
     warn_large_data = FALSE,
     ) + 
   ggtitle("Missing Values (NA or Blank) - Original Data Sample")+
+  labs(caption = "Clustering has been disabled due high volume data and memory limits.") +
   theme(plot.margin = margin(r = 50))
 ```
 
@@ -495,7 +501,8 @@ plot_missing_modified <- function(x, percent = TRUE, num_char = 100,
         ),
       vjust = -0.5,
       size = 3
-      ) 
+      ) +
+    ggtitle("Missing Values (NA or Blank) - Subset Data")
   
   # right
   missing_by_pattern_plot <- 
@@ -530,7 +537,6 @@ plot_missing_modified <- function(x, percent = TRUE, num_char = 100,
     patchwork::plot_layout(widths = c(4, 1), heights = c(2, 4))
 }
 
-# utils::globalVariables("where")
 
 payroll_data_fire_police <- readRDS("data_source/payroll_data_fire_police.rds")
 
@@ -541,10 +547,17 @@ payroll_data_fire_police_na_blank <-
 
 plot_missing_modified(payroll_data_fire_police_na_blank, percent = TRUE)
 ```
+::: callout-note
+## plot_missing() original source function has been modified
+Original function was changed to accommodate long column names in the x-axis and show % labels.
+:::
+
+\
+\
 
 ### Zeros and Complete Values
 
-In additiona to NAs and Blanks, an important part of this dataset is the analysis of [■]{style="color:#ABD9E9;"} Zero values. For this dataset, Zeros are relevant information and should not be excluded from the data. Let's take a look at the full analysis of NAs, Blanks, Zeros, and Complete values. 
+In addition to NAs and Blanks, an important part of this dataset is the analysis of [■]{style="color:#ABD9E9;"} Zero values. For this dataset, Zeros are relevant information and should not be excluded from the data. Let's take a look at the full analysis of NAs, Blanks, Zeros, and Complete values. 
 
 We can now examine how the values from the original compares to the final dataset:
 
@@ -691,8 +704,8 @@ HH::likert(x=Column~. | group,payroll_data_missing_group_likert,
            )
 ```
 ::: callout-note
-## Why did I use this chart?
-add exmplanation here
+## Diverging stacked bar chart to analyze missing data
+[In this dataset, values classified as "Complete" or "Zero" are considered positive, as they indicate usable data that can be effectively analyzed. Conversely, "NA" and "Blank" values pose potential issues for data interpretation. To reflect this distinction, the diverging stacked bar chart will position "NA" and "Blank" values on the left side, representing a negative impact on the analysis.]{style="font-size:82%;"}
 :::
 
 ## Original Details
@@ -880,764 +893,25 @@ Our final subset data (Fire and Police Departments) no longer contains [■]{sty
 For **mid_init** (Middle Name Initials), 29% of the data in the final subset is Blank, it is ok for us to have blanks in the data, this will not affect the future analysis. For **first_name** and **last_name** blank data (1.2% of the data in the final subset is Blank), these values are blank on purpose by the data provider: \
 [*...As a part of FISA-OPA’s routine process for reviewing and releasing Citywide Payroll Data, data for some agencies (specifically NYC Police Department (NYPD) and the District Attorneys’ Offices (Manhattan, Kings, Queens, Richmond, Bronx, and Special Narcotics)) have been redacted since they are exempt from disclosure pursuant to the Freedom of Information Law, POL § 87(2)(f), on the ground that disclosure of the information could endanger the life and safety of the public servants listed thereon...*]{style="font-size:70%;"}
 
-Based on this disclosure, we can confirm the Blank values for the names are part of the Police Department agency:
-```{r}
-payroll_data_fire_police |> 
-  filter(first_name == "" | last_name == "") |> 
-  group_by(agency_name) |> 
-  summarise(`Count of Blank Records` = n()) |> 
-  kable(col.names = c("Agency", "Count of Blank Records")) 
-```
-
-\
-\
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-::: callout-note
-**Instruction**
-
-2 Data data.qmd
-
-2.1 Technical description
-
-Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, dimensions, and any other relevant information. Note any issues / problems with the data, either known or that you discover. Explain how you plan to import the data. Carefully document your sources with links to the precise data sources that you used. If that is not possible (for example if your data is not available online, then explain that clearly.)
-
-(suggested: 1/2 page) 250-500 words
-
-2.2 Missing value analysis
-
-Describe any patterns you discover in missing values. If no values are missing, graphs should still be included showing that.
-
-(suggested: 2 graphs plus commentary)
-:::
-
-
-
-
-
+<!-- Based on this disclosure, we can confirm the Blank values for the names are part of the Police Department agency: -->
 <!-- ```{r} -->
-
-<!-- plot_missing(mycars, percent = TRUE)[[1]] + -->
-<!--   theme(axis.text.x = element_text(angle = 45, hjust = 0)) +  -->
-<!--   scale_x_discrete(position = "top") + -->
-<!-- plot_missing(mycars, percent = TRUE)[[2]] +  -->
-<!-- plot_missing(mycars, percent = TRUE)[[3]] +  -->
-<!--   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  -->
-<!-- plot_missing(mycars, percent = TRUE)[[4]] + -->
-<!-- patchwork::plot_layout(widths = c(4, 1), heights = c(1, 4)) -->
-
-
-<!-- # plot_missing_modified(mycars, percent = TRUE)[[4]] -->
-<!-- ``` -->
-
-
-
-<!-- ```{r} -->
-<!-- plot_missing(payroll_data_fire_police_na_blank, percent = FALSE) -->
-<!-- ``` -->
-<!-- ```{r} -->
-<!-- plot_missing(payroll_data_fire_police_na_blank, percent = FALSE) + -->
-<!-- theme(axis.text.x = element_text(angle = 45, hjust = 1)) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 7 -->
-<!-- #| message: false -->
-<!-- #| warning: false -->
-
-<!--   # plot_missing_modified(payroll_data_fire_police_na_blank, percent = FALSE) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 7 -->
-<!-- #| message: false -->
-<!-- #| warning: false -->
-
-
-<!-- plot_missing_modified(payroll_data_na_blank, percent = TRUE) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 7 -->
-<!-- #| message: false -->
-<!-- #| warning: false -->
-
-
-<!-- plot_missing_modified(payroll_data_fire_police_na_blank, percent = TRUE) -->
-<!-- ``` -->
-
-
-
-
-<!-- ```{r} -->
-<!-- payroll_data_na_blank_zero <- -->
-<!--   payroll_data |>  -->
-<!--   # mutate(across(everything(), ~ ifelse(. == "", NA, .))) -->
-<!--   mutate(across(everything(), ~ case_when( -->
-<!--     . == "" ~ NA,   # Replace blanks with NA -->
-<!--     TRUE ~ .        # Keep original value -->
-<!--   ))) |>  -->
-<!--   mutate(across(everything(), ~ case_when( -->
-<!--     . == 0 ~ NA,   # Replace blanks with NA -->
-<!--     TRUE ~ .        # Keep original value -->
-<!--   )))  -->
-<!--   # mutate(across(everything(), ~ sum(. == 0, na.rm = TRUE))) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 7 -->
-
-
-<!-- plot_missing_modified(payroll_data_na_blank_zero, percent = TRUE) -->
-<!-- ``` -->
-
-<!-- ```{r} -->
-<!-- payroll_data_na_blank <- -->
-<!--   payroll_data |>  -->
-<!--   # mutate(across(everything(), ~ ifelse(. == "", NA, .))) -->
-<!--   mutate(across(everything(), ~ case_when( -->
-<!--     . == "" ~ NA,   # Replace blanks with NA -->
-<!--     TRUE ~ .        # Keep original value -->
-<!--   )))  -->
-<!--   # mutate(across(everything(), ~ sum(. == 0, na.rm = TRUE))) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 12 -->
-
-
-<!-- plot_missing_modified(payroll_data_na_blank, percent = TRUE) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- payroll_data_fire_police_na_blank_zero <- -->
-<!--   payroll_data_fire_police |>  -->
-<!--   # mutate(across(everything(), ~ ifelse(. == "", NA, .))) -->
-<!--   mutate(across(everything(), ~ case_when( -->
-<!--     . == "" ~ NA,   # Replace blanks with NA -->
-<!--     TRUE ~ .        # Keep original value -->
-<!--   ))) |>  -->
-<!--   mutate(across(everything(), ~ case_when( -->
-<!--     . == 0 ~ NA,   # Replace blanks with NA -->
-<!--     TRUE ~ .        # Keep original value -->
-<!--   )))  -->
-<!--   # mutate(across(everything(), ~ sum(. == 0, na.rm = TRUE))) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- #| fig-width: 9 -->
-<!-- #| fig-height: 7 -->
-
-<!--   plot_missing_modified(payroll_data_fire_police_na_blank_zero, percent = FALSE) -->
-<!-- ``` -->
-
-
-
-
-
-<!-- ## Understanding and cleaning the raw data -->
-
-<!-- Starting with the original data (6.22 million rows). This is quick summary of how many categories we have in each column: -->
-
-<!-- ```{r} -->
-<!-- payroll_data |>  -->
-<!--   summarise( -->
-<!--     "Number of Agencies"     = n_distinct(agency_name), -->
-<!--     "Number of Titles"       = n_distinct(title_description), -->
-<!--     "Number of Locations"    = n_distinct(work_location_borough), -->
-<!--     "Number of Pay Basis"    = n_distinct(pay_basis), -->
-<!--     "Number of Fiscal Years" = n_distinct(fiscal_year) -->
-<!--   ) |>  -->
-<!--   kable() -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-
-<!-- ### Agencies -->
-
-<!-- Many of the agencies in the raw data have the following format: AGENCY_NAME #NUMBER.\ -->
-<!-- Examples:\ -->
-<!-- <p style="margin-top: -15px; font-size:85%;"> -->
-<!-- -   BROOKLYN COMMUNITY BOARD #1 -->
-<!-- -   BROOKLYN COMMUNITY BOARD #2 -->
-<!-- -   BROOKLYN COMMUNITY BOARD #3 -->
-<!-- </p> -->
-
-<!-- We will group Agency names by aggregating all agencies that have the same name, but different numbers. This will reduce overall number os agencies. -->
-
-<!-- ```{r} -->
-<!-- payroll_data <-  -->
-<!--   payroll_data |>  -->
-<!--   mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name))) -->
-
-<!-- payroll_data |>  -->
-<!--   summarise( -->
-<!--     "Number of Agencies Before" = n_distinct(agency_name), -->
-<!--     "Number of Agencies After"  = n_distinct(agency_name_clean), -->
-<!--   ) |>  -->
-<!--   kable() -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- Now, let's take a look at the top 10 Agencies: -->
-
-<!-- ```{r} -->
-<!-- payroll_data_summary <- payroll_data |>  -->
-<!--   group_by(agency_name_clean) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n() -->
-<!--   ) |>  -->
-<!--   arrange(desc(Total_records)) |>  -->
-<!--   slice_head(n = 10)   -->
-
-
-<!-- payroll_data_summary |>  -->
-<!--   kable(col.names = c("Agency", "Total Records")) |>  -->
-<!--   row_spec(which(payroll_data_summary$agency_name_clean == "FIRE DEPARTMENT"),   background = "#f94144", color = "white") |>  -->
-<!--   row_spec(which(payroll_data_summary$agency_name_clean == "POLICE DEPARTMENT"), background = "deepskyblue3", color = "white") -->
-
-
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- ### Work Location Borough -->
-
-<!-- When looking at the Work Location Borough, we see many recording with missing data (506,234 rows). We can also observe that the names of the locations are not standardized, some names are Uppercase and some are not (MANHATTAN vs Manhattan). -->
-
-<!-- ```{r} -->
-<!-- payroll_data |>  -->
-<!--   group_by(work_location_borough) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n() -->
-<!--   ) |>  -->
-<!--   arrange(desc(Total_records)) |>  -->
-<!--   slice_head(n = 10) |>  -->
-<!--   kable(col.names = c("Locations", "Total Records")) |>  -->
-<!--   row_spec(which(payroll_data |>  -->
-<!--                  group_by(work_location_borough) |>  -->
-<!--                  summarise(Total_records = n()) |>  -->
-<!--                  arrange(desc(Total_records)) |>  -->
-<!--                  slice_head(n = 10) |>  -->
-<!--                  pull(work_location_borough) %in% c("","Bronx", "MANHATTAN", "Manhattan")),   background = "#fcefb4", color = "black") -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- Our first step here is to capitalize all the location names. -->
-
-<!-- ```{r} -->
-<!-- payroll_data <- payroll_data |>  -->
-<!--   mutate(work_location_borough_clean = toupper(work_location_borough)) -->
-
-<!-- payroll_data |>  -->
-<!--   summarise( -->
-<!--     "Number of Locations Before" = n_distinct(work_location_borough), -->
-<!--     "Number of Locations After"  = n_distinct(work_location_borough_clean), -->
-<!--   ) |>  -->
-<!--   kable() -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- The main 5 locations of this dataset are: BRONX, BROOKLYN, MANHATTAN, QUEENS, RICHMOND\ -->
-<!-- Using the top 10 agencies that we found previously, we will keep all the agencies that have at least data for all 5 locations: -->
-
-<!-- ```{r} -->
-
-<!-- required_boroughs <- c("BRONX", "BROOKLYN", "MANHATTAN", "QUEENS", "RICHMOND") -->
-
-<!-- agencies_present_in_required_boroughs <- -->
-<!--   payroll_data |> -->
-<!--   filter(work_location_borough_clean %in% required_boroughs) |>  -->
-<!--   group_by(agency_name_clean) |>   -->
-<!--   summarise( -->
-<!--     borough_count = n_distinct(work_location_borough_clean)   -->
-<!--   ) |> -->
-<!--   filter(borough_count == length(required_boroughs)) |>  -->
-<!--   filter(agency_name_clean %in% payroll_data_summary$agency_name_clean) |>  -->
-<!--   pull(agency_name_clean) -->
-
-
-<!-- payroll_data_agencies_present_in_required_boroughs <- -->
-<!--   payroll_data |>  -->
-<!--   filter(agency_name_clean %in% payroll_data_summary$agency_name_clean) |>  -->
-<!--   filter(agency_name_clean %in% agencies_present_in_required_boroughs) |>  -->
-<!--   group_by(agency_name_clean) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n(), -->
-<!--     "Number of Locations" = n_distinct(work_location_borough_clean) -->
-<!--   ) |>  -->
-<!--   arrange(desc(Total_records))  -->
-
-<!-- payroll_data_agencies_present_in_required_boroughs |>  -->
-<!--   kable(col.names = c("Agency", "Total Records", "Number of Locations")) |>  -->
-<!--   row_spec(which(payroll_data_agencies_present_in_required_boroughs$agency_name_clean == "FIRE DEPARTMENT"),   background = "#f94144", color = "white") |>  -->
-<!--   row_spec(which(payroll_data_agencies_present_in_required_boroughs$agency_name_clean == "POLICE DEPARTMENT"), background = "deepskyblue3", color = "white") -->
-
-<!-- ``` -->
-
-<!-- \ -->
-<!-- Since we are interested in the POLICE and FIRE departments, let's take a closer look at the FIRE DEPARTMENT since it contains 7 locations. Based on these results, we have 1 record with location OTHER and 16555 with Blank location. -->
-
-
-<!-- ```{r} -->
-<!-- payroll_data |>  -->
-<!--   filter(agency_name_clean %in%  c("POLICE DEPARTMENT","FIRE DEPARTMENT")) |>  -->
-<!--   filter(agency_name_clean %in% agencies_present_in_required_boroughs) |>  -->
-<!--   group_by(agency_name_clean,work_location_borough_clean,fiscal_year) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n(), .groups = 'drop' -->
-<!--   ) |>  -->
-<!--   arrange(agency_name_clean,work_location_borough_clean,fiscal_year) |>  -->
-<!--   filter (!work_location_borough_clean %in% required_boroughs) |>  -->
-<!--   kable(col.names = c("Agency", "Location", "Fiscal Year", "Total Records")) -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- The final decision for location is to keep only data for the major 5 locations: \ -->
-<!-- BRONX, BROOKLYN, MANHATTAN, QUEENS, RICHMOND. -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- ### Fiscal Year -->
-
-<!-- Using only the FIRE and POLICE department, we can observe that we have no records for 2014 for the Police department. Please note that the 16555 in the FIRE department for 2014 are the same records with blank location we found before.  -->
-
-<!-- The final decision for Fiscal Year is to drop 2014 and keep only data from 2015 to 2024. -->
-
-
-<!-- ```{r} -->
-<!-- # Create the pivot table -->
-<!-- pivot_table_fiscal_year <- payroll_data |> -->
-<!-- filter(agency_name_clean %in%  c( -->
-<!--     "POLICE DEPARTMENT", -->
-<!--     "FIRE DEPARTMENT" -->
-<!--     )) |>  -->
-<!--   group_by(fiscal_year, agency_name_clean) |>  -->
-<!--   summarise(count = n(), .groups = 'drop') |>  -->
-<!--   pivot_wider( -->
-<!--     names_from = agency_name_clean,   -->
-<!--     values_from = count,   -->
-<!--     values_fill = list(count = 0)  -->
-<!--   ) -->
-
-<!-- pivot_table_fiscal_year |> -->
-<!--   kable(col.names = c("Fiscal Year", "FIRE DEPARTMENT", "POLICE DEPARTMENT")) |>  -->
-<!--   kable_styling() |> -->
-<!--   column_spec(3, background = ifelse(as.matrix(pivot_table_fiscal_year[, 3]) == 0, "#fcefb4", "")) -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- ### Pay Basis -->
-
-<!-- Based on the different types of pay basis, we will drop the `Prorated Annual` as it is the category with the lowest amount of records and it only affects 1 job title (Chaplain). -->
-
-<!-- The final decision for Pay Basis is to keep only data for the categories: \ -->
-<!-- per Annum, per Day, per Hour. -->
-
-
-<!-- ```{r} -->
-<!-- payroll_data |>  -->
-<!--   # filter(fiscal_year == "2024") |> -->
-<!--   filter(agency_name_clean %in%  c( -->
-<!--     "POLICE DEPARTMENT", -->
-<!--     "FIRE DEPARTMENT" -->
-<!--     )) |>  -->
-<!--   group_by(agency_name_clean,pay_basis) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n(), -->
-<!--     Count_of_titles = n_distinct(title_description) -->
-<!--     , .groups = 'drop' -->
-<!--   ) |>  -->
-<!--   arrange(desc(Total_records)) |> -->
-<!--   kable(col.names = c("Agency", "Pay Basis", "Total Records", "Count of Titles")) -->
-
-<!-- payroll_data |>  -->
-<!--   # filter(fiscal_year == "2024") |> -->
-<!--   filter(agency_name_clean %in%  c( -->
-<!--     "POLICE DEPARTMENT", -->
-<!--     "FIRE DEPARTMENT" -->
-<!--     )) |>  -->
-<!--   filter(pay_basis == "Prorated Annual") |> -->
-<!--   filter(title_description == "CHAPLAIN") |>  -->
-<!--   group_by(agency_name_clean,pay_basis,title_description) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n() -->
-<!--     , .groups = 'drop' -->
-<!--   ) |>  -->
-<!--   arrange(agency_name_clean) |> -->
-<!--   kable(col.names = c("Agency", "Pay Basis", "Title", "Total Records")) -->
-<!-- ``` -->
-
-
-
-
-
-<!-- \ -->
-<!-- \ -->
-
-
-<!-- ### Payroll Number	 -->
-
-<!-- First let's start create a dataset filtered based on the criteria we discussed above:\ -->
-<!-- <p style="margin-top: -15px"> -->
-<!-- -   Agency ("POLICE DEPARTMENT","FIRE DEPARTMENT") -->
-<!-- -   Location ("BRONX", "BROOKLYN", "MANHATTAN", "QUEENS", "RICHMOND"),  -->
-<!-- -   Fiscal Year (2015-2024) -->
-<!-- -   Pay Basis ("per Annum", "per Day", "per Hour") -->
-<!-- </p> -->
-
-<!-- From this dataset, we still have 243,601 NA records for the column `Payroll Number'. By doing a group by analysis per fiscal year, we can observe the NA are related to the years 2015, 2016, and 2017. So we will backfill those years with the proper payroll number code based on each agency. This way we will no longer have NA values in the new dataset. -->
-
-
-<!-- ```{r} -->
-<!-- payroll_data_filtered <-  -->
-<!--   payroll_data |>  -->
-<!--   filter(agency_name_clean %in%  c("POLICE DEPARTMENT","FIRE DEPARTMENT")) |>  -->
-<!--   filter(work_location_borough_clean %in%   c("BRONX", "BROOKLYN", "MANHATTAN", "QUEENS", "RICHMOND")) |>  -->
-<!--   filter(fiscal_year > "2014") |>  -->
-<!--   filter(pay_basis %in%   c("per Annum", "per Day", "per Hour")) -->
-
-
-<!-- # Count NA values -->
-<!-- na_summary <- payroll_data_filtered |> -->
-<!--   summarise(across(everything(), ~ sum(is.na(.)))) |> -->
-<!--   pivot_longer( -->
-<!--     cols = everything(), -->
-<!--     names_to = "Column", -->
-<!--     values_to = "NA Count" -->
-<!--   ) -->
-
-<!-- # Count blank values -->
-<!-- blank_summary <- payroll_data_filtered |> -->
-<!--   summarise(across(everything(), ~ sum(. == "", na.rm = TRUE))) |> -->
-<!--   pivot_longer( -->
-<!--     cols = everything(), -->
-<!--     names_to = "Column", -->
-<!--     values_to = "Blank Count" -->
-<!--   ) -->
-
-<!-- # Count zero values -->
-<!-- zero_summary <- payroll_data_filtered |> -->
-<!--   summarise(across(everything(), ~ sum(. == 0, na.rm = TRUE))) |> -->
-<!--   pivot_longer( -->
-<!--     cols = everything(), -->
-<!--     names_to = "Column", -->
-<!--     values_to = "Zero Count" -->
-<!--   ) -->
-
-
-<!-- combined_summary <- na_summary |> -->
-<!--   inner_join(blank_summary, by = "Column") |> -->
-<!--   inner_join(zero_summary, by = "Column") -->
-
-<!-- # combined_summary |> -->
-<!-- #   filter(`NA Count` > 0 | `Blank Count` > 0 | `Zero Count` > 0) |>  -->
-<!-- #   kable(col.names = c("Column", "NA Count", "Blank Count", "Zero Count")) -->
-
-<!-- na_summary |>  -->
-<!--   filter(`NA Count` > 0) |>  -->
-<!--   kable(col.names = c("Column", "NA Count")) -->
-<!-- ``` -->
-
-
-
-<!-- ```{r} -->
-<!-- payroll_data_filtered_payroll <- payroll_data_filtered |>  -->
-<!--   group_by(agency_name_clean,payroll_number,fiscal_year) |>  -->
-<!--   summarise( -->
-<!--     Total_records = n() -->
-<!--     ,.groups = "drop" -->
-<!--   ) |>  -->
-<!--   arrange(agency_name_clean,fiscal_year,desc(Total_records)) -->
-
-<!-- payroll_data_filtered_payroll |>  -->
-<!--   kable(col.names = c("Agency", "Payroll Number", "Fiscal Year", "Total Records")) |> -->
-<!--   column_spec(2, background = ifelse(is.na(as.matrix(payroll_data_filtered_payroll[, 2])), "#fcefb4", "")) -->
-<!-- ``` -->
-
-
-
-<!-- ```{r} -->
-<!-- # Backfill NA values with the proper payroll number based on each agency -->
-<!-- payroll_data_fire_police <-  -->
-<!--   payroll_data_filtered |> -->
-<!--   mutate( -->
-<!--     payroll_number = case_when( -->
-<!--       is.na(payroll_number) & agency_name_clean == "FIRE DEPARTMENT" ~ 57, -->
-<!--       is.na(payroll_number) & agency_name_clean == "POLICE DEPARTMENT" ~ 56, -->
-<!--       TRUE ~ payroll_number -->
-<!--     ) -->
-<!--   ) |>  -->
-<!--   mutate( -->
-<!--     agency_name = agency_name_clean, -->
-<!--     work_location_borough = work_location_borough_clean -->
-<!--   ) |> -->
-<!--   dplyr::select(-agency_name_clean, -work_location_borough_clean) -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- ### Agency Start Date -->
-
-<!-- The column agency_start_date is loaded as a character when we read the data for the first time. We will change the type to date using `lubridate`. -->
-
-<!-- ```{r} -->
-<!-- library(lubridate) -->
-
-<!-- payroll_data_fire_police <-  -->
-<!--   payroll_data_fire_police |>  -->
-<!--   mutate(agency_start_date = mdy(agency_start_date)) -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-
-<!-- ### Saving Subset Data -->
-
-<!-- We will save the Final Subset Data into a folder, so we can load later inside `results.qmd`. -->
-
-<!-- ```{r} -->
-<!-- # CSV -->
-<!-- # write.csv(payroll_data_fire_police, "data_source/payroll_data_fire_police.csv", row.names = FALSE) -->
-
-<!-- # RDS -->
-<!-- # saveRDS(payroll_data_fire_police, "data_source/payroll_data_fire_police.rds") -->
-<!-- # payroll_data_fire_police <- readRDS("data_source/payroll_data_fire_police.rds") -->
-<!-- ``` -->
-
-
-<!-- \ -->
-<!-- \ -->
-<!-- \ -->
-
-
-<!-- ## Deciding on final data subset -->
-
-<!-- Based on the analysis above, we will add a few filters to produce and clean our final dataset. -->
-
-<!-- **Filters applied to the dataset:**\ -->
-
-<!-- ```{r} -->
-<!-- #| echo: false -->
-
-<!-- library(tibble) -->
-<!-- library(knitr) -->
-<!-- library(kableExtra) -->
-
-<!-- payroll_data_format <- tibble( -->
-<!--   column_name = c( -->
-<!--     "Agency Name",  -->
-<!--     "Work Location Borough", -->
-<!--     "Fiscal Year",  -->
-<!--     "Pay Basis" -->
-<!--   ), -->
-<!--   filter = c( -->
-<!--     "FIRE DEPARTMENT, POLICE DEPARTMENT", -->
-<!--     "BRONX, BROOKLYN, MANHATTAN, QUEENS, RICHMOND", -->
-<!--     "From 2015 to 2024",  -->
-<!--     "per Annum, per Day, per Hour" -->
-<!--   ) -->
-<!-- ) -->
-
-<!-- names(payroll_data_format) <- c("Column Name","Filter") -->
-
-<!-- kable(payroll_data_format, -->
-<!--       # caption = "Dataset Format",  -->
-<!--       align = "l") |> -->
-<!--   kable_styling(full_width = FALSE) |> -->
-<!--   column_spec(1, width = "200px") -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- **Cleaning data and Handling NAs:**\ -->
-
-<!-- ```{r} -->
-<!-- #| echo: false -->
-
-<!-- library(tibble) -->
-<!-- library(knitr) -->
-<!-- library(kableExtra) -->
-
-<!-- payroll_data_format <- tibble( -->
-<!--   column_name = c( -->
-<!--     "Agency Name", -->
-<!--     "Work Location Borough",  -->
-<!--     "Fiscal Year",  -->
-<!--     "Pay Basis", -->
-<!--     "Payroll Number", -->
-<!--     "Agency Start Date" -->
-<!--   ), -->
-<!--   filter = c( -->
-<!--     "Group agencies with similar names. Keep only FIRE and POLICE.", -->
-<!--     "Uppercase all names. Filtering data only for top 5 Boroughs.", -->
-<!--     "2014 had missing data for Police Department. 2014 will be removed.",  -->
-<!--     "Keeping only the top 3 Pay Basis.", -->
-<!--     "Missing NA values have been backfilled based on Agency Name.", -->
-<!--     "Convert strings to date using lubridate." -->
-<!--   ) -->
-<!-- ) -->
-
-<!-- names(payroll_data_format) <- c("Column Name","Note") -->
-
-<!-- kable(payroll_data_format, -->
-<!--       # caption = "Dataset Format",  -->
-<!--       align = "l") |> -->
-<!--   kable_styling(full_width = FALSE) |> -->
-<!--   column_spec(1, width = "200px") -->
-<!-- ``` -->
-
-<!-- \ -->
-<!-- \ -->
-
-<!-- **Size of Final subset Data**\ -->
-
-<!-- ```{r} -->
-<!-- #| echo: false -->
-
-<!-- library(knitr) -->
-<!-- library(kableExtra) -->
-
-<!-- # Create a tibble for the metadata -->
-<!-- metadata <- tibble::tibble( -->
-<!--   Field = c( -->
-<!--     # "Dataset Name", -->
-<!--     # "Provided by", -->
-<!--     # "Data Category", -->
-<!--     # "Frequency of Updates",  -->
-<!--     # "Date Created",  -->
-<!--     # "Data Last Updated",  -->
-<!--     "Dimensions", -->
-<!--     "Each row represents" -->
-<!--     # "Source URL" -->
-<!--   ), -->
-<!--   Value = c( -->
-<!--     # "Citywide Payroll Data (Fiscal Year)", -->
-<!--     # "Office of Payroll Administration (OPA)", -->
-<!--     # "City Government", -->
-<!--     # "Annually",  -->
-<!--     # "October 31, 2015",  -->
-<!--     # "October 30, 2024",  -->
-<!--     "804,630 rows and 17 columns", -->
-<!--     "City Employee Salary per Fiscal Year" -->
-<!--     # "https://data.cityofnewyork.us/" -->
-<!--   ) -->
-<!-- ) -->
-
-<!-- # Print the metadata table using kable -->
-<!-- kable(metadata, col.names = NULL,  -->
-<!--       # caption = "Dataset Metadata", -->
-<!--       align = "l") -->
-
-<!-- ``` -->
-
-<!-- \ -->
-
-<!-- **Record count by Agency:**\ -->
-
-<!-- ```{r} -->
-<!-- #| message: false -->
-<!-- #| warning: false -->
-<!-- #| fig-width: 7 -->
-<!-- #| fig-height: 3 -->
-
-<!-- library(ggplot2) -->
-<!-- library(tibble) -->
-<!-- library(dplyr) -->
-
 <!-- payroll_data_fire_police |>  -->
+<!--   filter(first_name == "" | last_name == "") |>  -->
 <!--   group_by(agency_name) |>  -->
-<!--   summarise( -->
-<!--     Count = n() -->
-<!--     , .groups = 'drop' -->
-<!--   ) |>  -->
-<!--   arrange(desc(Count)) |> -->
-<!--   mutate(Percentage = Count / sum(Count) * 100, -->
-<!--          Label = paste( -->
-<!--                        format(Count, big.mark = ","), "\n", " (", sprintf("%.0f", Percentage), "%)", sep = "")) |>  -->
-<!-- ggplot(aes(x = "", y = Count, fill = agency_name)) + -->
-<!--   geom_bar(stat = "identity", width = 1) + -->
-<!--   coord_polar(theta = "y") + -->
-<!--   scale_fill_manual(name= 'Agency', values = c("#f94144", "deepskyblue3")) + -->
-<!--   # labs(title = "Record Count by Department") + -->
-<!--   theme_void() + -->
-<!--   geom_text(aes(label = Label), position = position_stack(vjust = 0.5), color = "white") -->
-
+<!--   summarise(`Count of Blank Records` = n()) |>  -->
+<!--   kable(col.names = c("Agency", "Count of Blank Records"))  -->
 <!-- ``` -->
 
-
-<!-- **Overall dataset Information:**\ -->
-
-<!-- ```{r} -->
-<!-- #| echo: false -->
-
-
-<!-- # Create a tibble for the metadata -->
-<!-- metadata_final_table <- tibble::tibble( -->
-<!--   "Metrics" = c( -->
-<!--     "Count of Records", -->
-<!--     "Fiscal Years", -->
-<!--     "Agency Start Date Range",  -->
-<!--     "Work Location Borough", -->
-<!--     "Title Description" -->
-<!--   ), -->
-<!--   "Fire Deparmtnet" = c( -->
-<!--     "192,638", -->
-<!--     "10 years (2015-2024)", -->
-<!--     "1968-04-22 to 2024-07-29   ",  -->
-<!--     "5", -->
-<!--     "238" -->
-<!--   ), -->
-<!--   "Police Department" = c( -->
-<!--     "611,992", -->
-<!--     "10 years (2015-2024)", -->
-<!--     "1960-11-14 to 2049-10-16",  -->
-<!--     "5", -->
-<!--     "335" -->
-<!--   ), -->
-<!-- ) -->
+\
+In conclusion, the subset data for FIRE and POLICE departments (which will be used in the Results section) contains no [■]{style="color:#D7191C;"} NA values, only [■]{style="color:#FDAE61;"} Blank values that won't affect the analysis, [■]{style="color:#ABD9E9;"} Zero values that are crucial for salary-related insights, and multiple columns with a [■]{style="color:#2C7BB6;"} Complete set of values for all rows.
 
 
 
-<!-- # Print the metadata table using kable -->
-<!-- kable(metadata_final_table,  -->
-<!--       # col.names = NULL,  -->
-<!--       # caption = "Dataset Metadata", -->
-<!--       align = "l") -->
+<!-- &nbsp;&nbsp;&nbsp; [■]{style="color:#D7191C;"}  NA      - any values equal to *NA* \ -->
+<!-- &nbsp;&nbsp;&nbsp; [■]{style="color:#FDAE61;"}  Blank   - string values equal to "" \ -->
+<!-- &nbsp;&nbsp;&nbsp; [■]{style="color:#ABD9E9;"}  Zero    - numeric values equal to 0 \ -->
+<!-- &nbsp;&nbsp;&nbsp; [■]{style="color:#2C7BB6;"}  Complete - any values with data \ -->
 
-<!-- ``` -->
 
 
 
@@ -1647,30 +921,22 @@ Describe any patterns you discover in missing values. If no values are missing, 
 \
 \
 \
-\
-\
-\
-\
-\
-\
 
-```{r}
-#| echo: false
-# ::: callout-note
-# **Instruction**
-# 
-# 2 Data data.qmd
-# 
-# 2.1 Technical description
-# 
-# Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, dimensions, and any other relevant information. Note any issues / problems with the data, either known or that you discover. Explain how you plan to import the data. Carefully document your sources with links to the precise data sources that you used. If that is not possible (for example if your data is not available online, then explain that clearly.)
-# 
-# (suggested: 1/2 page) 250-500 words
-# 
-# 2.2 Missing value analysis
-# 
-# Describe any patterns you discover in missing values. If no values are missing, graphs should still be included showing that.
-# 
-# (suggested: 2 graphs plus commentary)
-# :::
-```
+<!-- ::: callout-note -->
+<!-- **Instruction** -->
+
+<!-- 2 Data data.qmd -->
+
+<!-- 2.1 Technical description -->
+
+<!-- Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, dimensions, and any other relevant information. Note any issues / problems with the data, either known or that you discover. Explain how you plan to import the data. Carefully document your sources with links to the precise data sources that you used. If that is not possible (for example if your data is not available online, then explain that clearly.) -->
+
+<!-- (suggested: 1/2 page) 250-500 words -->
+
+<!-- 2.2 Missing value analysis -->
+
+<!-- Describe any patterns you discover in missing values. If no values are missing, graphs should still be included showing that. -->
+
+<!-- (suggested: 2 graphs plus commentary) -->
+<!-- ::: -->
+
