--- a/results.qmd
+++ b/results.qmd
@@ -1404,7 +1404,11 @@ ggplot(essay_grades_frequency_lode,
   #           size = 3
   #           ) +
   scale_fill_brewer(palette = "Spectral", direction = -1, na.translate = FALSE) +
-   scale_x_discrete(                   expand = c(.1, .1)) +
+   scale_x_discrete(                   
+     expand = c(.1, .1),
+     labels = c("years_band" = "Years of Experience", 
+                  "total_paid_group" = "Salary Range")
+     ) +
 # ggrepel::geom_text_repel(
 #   aes(label = ifelse(as.numeric(x) == 2, as.character(stratum), NA) ),
 #   stat = "stratum",
@@ -1432,10 +1436,10 @@ scale_y_continuous(labels = label_number(scale_cut = cut_short_scale())) +
 # facet_grid(work_location_borough ~ agency_name, scales = "free_y") +
 # work_location_borough
  # facet_wrap(~ years_band_group + agency_name, scales = "free_y") + 
-  labs(title = "Student Performance on the Three Essays",
-       x = "Essays",
-       y = "Number of Students",
-       fill="Section") +
+  labs(title = "Exploring the Relationship Between Years of Experience and Salary Ranges",
+       x = "",
+       y = "Number of Employees",
+       fill="Salary Range") +
   theme_minimal() +
   theme(legend.position = "bottom",
          panel.spacing = unit(3, "lines"),
